* decoder
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - wavpack: require libwavpack version 5
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* remove Haiku support

ver 0.23.11 (2022/11/28)
* database
  - simple: move default database to ~/.cache/mpd/db from ~/.cache/mpd.db
  - simple: default "cache_directory" to ~/.cache/mpd/mounts
* macOS: fix build failure "no archive members specified"
* Windows
  - fix crash bug (stack buffer overflow) after I/O errors
  - fix path traversal bug because backslash was allowed in playlist names
* Android/Windows
  - update OpenSSL to 3.0.7
  - re-enable CURL's verbose error strings

ver 0.23.10 (2022/10/14)
* storage
  - curl: fix file time stamps
* decoder
  - ffmpeg: fix libfmt 9 compiler warning
* encoder
  - flac: fix failure when libFLAC is built without Ogg support
* output
  - alsa: fix crash bug
* Windows
  - log to stdout by default, don't require "log_file" setting

ver 0.23.9 (2022/08/18)
* input
  - cdio_paranoia: add options "mode" and "skip"
* decoder
  - ffmpeg: support FFmpeg 5.1
* filter
  - replay gain: fix delayed volume display with handler=mixer
* output
  - pipewire: set app icon
* fix bogus volume levels with multiple partitions
* improve iconv detection
* macOS: fix macOS 10 build problem (0.23.8 regression)
* Android
  - load mpd.conf from app data directory

ver 0.23.8 (2022/07/09)
* storage
  - curl: fix crash if web server does not understand WebDAV
* input
  - cdio_paranoia: fix crash if no drive was found
  - cdio_paranoia: faster cancellation
  - cdio_paranoia: don't scan for replay gain tags
  - pipewire: fix playback of very short tracks
  - pipewire: drop all buffers before manual song change
  - pipewire: fix stuttering after manual song change