@@ -24,6 +24,7 @@ ver 0.24 (not yet released)
   - GCC 10 or clang 11 (or newer) recommended
 * static partition configuration
 * remove Haiku support
+* require libfmt 7 or later
 
 ver 0.23.11 (2022/11/28)
 * database
